@@ -1,3 +1,9 @@
+2013-10-09  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* common/filestuff.c (gdb_fopen_cloexec): Remove initialization of
+	result variable.  Rename variable fopen_e_ever_failed to
+	fopen_e_ever_failed_einval.  Retry fopen only for errno EINVAL.
+
 2013-10-09  Pedro Alves  <palves@redhat.com>
 
 	* monitor.c (monitor_write_memory, monitor_write_memory_bytes)
